test/tests/errors/error-not-not-bool.sm
// true
// false
/**/
/**/

program {
    output !(1 + 1);
}